# nestle-ml-starter

./: .bumpversion.cfg  .flake8  .gitignore  .license-whitelist.txt  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  check_licenses.sh  dev-requirements.txt  jupytext.toml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  deploy-batch-endpoint-pipeline.yml  deploy-model-training-pipeline.yml  deploy-online-endpoint-pipeline.yml
data-science/notebooks/: evaluate.ipynb  evaluate.py  prep.ipynb  prep.py  register.ipynb  register.py  train.ipynb  train.py
infra/: config-dev.yml  config-prod.yml
mlops/azureml/train/: data.yml  pipeline.yml  rai-pipeline.yml  train-env.yml
scripts/: check_licenses.sh
src/evaluate/: evaluate.py
src/nestle_ml_starter/: __init__.py
src/nestle_ml_starter/evaluate/: evaluate.py
src/nestle_ml_starter/prep/: prep.py
src/nestle_ml_starter/register/: register.py
src/nestle_ml_starter/train/: train.py
src/prep/: prep.py
src/register/: register.py
src/tests/: test_evaluate.py  test_prep.py  test_train.py
src/train/: train.py
