[tool.poetry]
name = "nestle-ml-starter"
version = "0.1.0"
description = "Nestle MLOps blueprint template for ML at scale"
authors = ["Alcides Morales Guedes <Alcides.Morales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
black = "^23.11.0"
pycln = "^2.3.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
mypy = "^1.7.0"
pyupgrade = "^3.15.0"
bandit = "^1.7.5"
jupytext = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
