[tool.poetry]
name = "nestle-ml-starter"
version = "0.1.0"
description = "Nestle MLOps blueprint template for ML at scale"
authors = ["Alcides Morales Guedes <Alcides.Morales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
mlflow = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
black = "^23.11.0"
pycln = "^2.3.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
mypy = "^1.7.0"
pyupgrade = "^3.15.0"
bandit = "^1.7.5"
jupytext = "^1.15.2"

[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude_dirs = ["venv",]
skips = ["B101"]